backend/elasticsearch/kubernetes/application/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: elasticsearch
spec:
  replicas: 1
  selector:
    matchLabels:
      app: elasticsearch
  template:
    metadata:
      labels:
        app: elasticsearch
    spec:
      containers:
        - name: elasticsearch
          image: elasticsearch:7.17.16
          ports:
            - containerPort: 9200
          volumeMounts:
            - name: esdata
              mountPath: /usr/share/elasticsearch/data
          resources:
            limits:
              memory: "1Gi"
            requests:
              memory: "1Gi"
      volumes:
        - name: esdata
          emptyDir: {}
